Fix tags visibility and footer size

--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ ul.techstack > li {
 }
 
 /* hide desktop tags */
-.workscard:nth-of-type(n + 2) > section > ul.tags > li:nth-of-type(1) {
+.workscard:nth-of-type(n + 2) > section > ul.tags > li:nth-of-type(2) {
   display: none;
 }
 
@@ -884,7 +884,7 @@ footer {
 
   .contactfooter {
     width: 100%;
-    height: 846px;
+    height: 900px;
     background: url("images/desktop_footer.png") right top no-repeat;
     background-size: 85% 95%, 100%;
     background-color: #6070ff;
@@ -941,7 +941,7 @@ footer {
   }
 
   /* hide desktop tags */
-  .workscard:nth-of-type(n + 2) > section > ul.tags > li:nth-of-type(1) {
+  .workscard:nth-of-type(n + 2) > section > ul.tags > li:nth-of-type(2) {
     display: block;
   }
 
